@@ -18,42 +18,36 @@ package org.raml.jaxrs.generator;
 import amf.client.model.document.Document;
 import amf.client.model.domain.*;
 import com.google.common.base.Function;
+import com.google.common.base.Suppliers;
 import com.google.common.collect.ArrayListMultimap;
-import com.google.common.collect.FluentIterable;
 import com.google.common.io.Files;
 import com.squareup.javapoet.JavaFile;
 import com.squareup.javapoet.TypeName;
 import com.squareup.javapoet.TypeSpec;
-import com.sun.codemodel.JCodeModel;
-import japa.parser.ast.body.TypeDeclaration;
 import org.apache.commons.io.FileUtils;
 import org.jsonschema2pojo.GenerationConfig;
 import org.raml.jaxrs.generator.builders.*;
 import org.raml.jaxrs.generator.builders.resources.ResourceGenerator;
 import org.raml.jaxrs.generator.extension.resources.api.*;
 import org.raml.jaxrs.generator.ramltypes.GMethod;
-import org.raml.jaxrs.generator.ramltypes.GResource;
 import org.raml.jaxrs.generator.ramltypes.GResponse;
-import org.raml.jaxrs.generator.v10.*;
-import org.raml.jaxrs.generator.v10.Annotations;
+import org.raml.jaxrs.generator.v10.ExtensionManager;
+import org.raml.jaxrs.generator.v10.V10GType;
 import org.raml.jaxrs.generator.v10.types.V10RamlToPojoGType;
-import org.raml.ramltopojo.*;
+import org.raml.ramltopojo.PluginDef;
+import org.raml.ramltopojo.RamlToPojo;
+import org.raml.ramltopojo.RamlToPojoBuilder;
+import org.raml.ramltopojo.TypeFetchers;
 import org.raml.ramltopojo.plugin.PluginManager;
-import org.raml.v2.api.model.v10.api.Api;
-import org.raml.v2.api.model.v10.bodies.Response;
-import org.raml.v2.api.model.v10.datamodel.JSONTypeDeclaration;
-import org.raml.v2.api.model.v10.datamodel.TypeDeclaration;
-import org.raml.v2.api.model.v10.datamodel.XMLTypeDeclaration;
-import org.raml.v2.api.model.v10.methods.Method;
-import org.raml.v2.api.model.v10.resources.Resource;
 
 import javax.annotation.Nullable;
 import javax.lang.model.element.Modifier;
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Paths;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import static java.util.Collections.singletonList;
 
@@ -62,515 +56,389 @@ import static java.util.Collections.singletonList;
  */
 public class CurrentBuild {
 
-  private final Document api;
-  private ExtensionManager extensionManager;
-  private final File ramlDirectory;
+    private final Document api;
+    private final ExtensionManager extensionManager;
 
-  private final List<ResourceGenerator> resources = new ArrayList<>();
-  private final Map<String, TypeGenerator> builtTypes = new ConcurrentHashMap<>();
-  private final PluginManager pluginManager = PluginManager.createPluginManager("META-INF/ramltojaxrs-plugin.properties");
+    private final List<ResourceGenerator> resources = new ArrayList<>();
+    private final Map<String, TypeGenerator<?>> builtTypes = new ConcurrentHashMap<>();
+    private final PluginManager pluginManager = PluginManager.createPluginManager("META-INF/ramltojaxrs-plugin.properties");
 
-  private GlobalResourceExtension.Composite resourceExtensionList = new GlobalResourceExtension.Composite();
+    private final GlobalResourceExtension.Composite resourceExtensionList = new GlobalResourceExtension.Composite();
 
-  private Map<String, GeneratorType> foundTypes = new HashMap<>();
+    private final Map<String, GeneratorType> foundTypes = new HashMap<>();
 
-  private final List<JavaPoetTypeGenerator> supportGenerators = new ArrayList<>();
-  private Configuration configuration;
-  private Set<JavaPoetTypeGenerator> implementations = new HashSet<>();
+    private final List<JavaPoetTypeGenerator> supportGenerators = new ArrayList<>();
+    private Configuration configuration;
+    private final ArrayListMultimap<JavaPoetTypeGenerator, JavaPoetTypeGenerator> internalTypesPerClass = ArrayListMultimap.create();
+    private File schemaRepository;
 
-  private ArrayListMultimap<JavaPoetTypeGenerator, JavaPoetTypeGenerator> internalTypesPerClass = ArrayListMultimap.create();
+    private Supplier<RamlToPojo> ramlToPojo;
 
-  private File schemaRepository;
+    public CurrentBuild(Document api, ExtensionManager extensionManager) {
 
-  private RamlToPojo ramlToPojo;
-
-  public CurrentBuild(Document api, ExtensionManager extensionManager) {
-
-    this.api = api;
-    this.extensionManager = extensionManager;
-    this.ramlDirectory = ramlDirectory;
-    this.configuration = Configuration.defaultConfiguration();
-  }
-
-
-  public File getRamlDirectory() {
-    return ramlDirectory;
-  }
-
-  public RamlToPojo fetchRamlToPojoBuilder() {
-
-    if (ramlToPojo == null) {
-
-      ramlToPojo = RamlToPojoBuilder.builder(this.api)
-          .inPackage(getModelPackage())
-          .fetchTypes(TypeFetchers.fromAnywhere())
-          .build(FluentIterable.from(this.typeConfiguration()).transform(new Function<String, String>() {
-
-            @Nullable
-            @Override
-            public String apply(@Nullable String s) {
-              if (s.contains(".")) {
-                return s;
-              } else {
-                return "core." + s;
-              }
-            }
-          }).toList());
+        this.api = api;
+        this.extensionManager = extensionManager;
+        this.configuration = Configuration.defaultConfiguration();
+        this.ramlToPojo = Suppliers.memoize(() ->
+                RamlToPojoBuilder.builder(this.api)
+                        .inPackage(getModelPackage())
+                        .fetchTypes(TypeFetchers.fromAnywhere())
+                        .build(this.typeConfiguration().stream().map((Function<String, String>) s -> s.contains(".") ? s : "core." + s).collect(Collectors.toList())));
     }
 
-    return ramlToPojo;
-  }
+    public RamlToPojo fetchRamlToPojoBuilder() {
 
-
-  public File getSchemaRepository() {
-
-    if (schemaRepository == null) {
-
-      schemaRepository = Files.createTempDir();
+        return ramlToPojo.get();
     }
 
-    return schemaRepository;
-  }
 
-  public Api getApi() {
-    return api;
-  }
+    public File getSchemaRepository() {
 
-  public String getResourcePackage() {
+        if (schemaRepository == null) {
 
-    return configuration.getResourcePackage();
-  }
-
-  public String getModelPackage() {
-
-    return configuration.getModelPackage();
-  }
-
-  public String getSupportPackage() {
-    return configuration.getSupportPackage();
-  }
-
-  public void generate(final File rootDirectory) throws IOException {
-
-    try {
-      if (resources.size() > 0 && shouldGenerateResponseClasses()) {
-        ResponseSupport.buildSupportClasses(rootDirectory, getSupportPackage());
-      }
-
-      for (TypeGenerator typeGenerator : builtTypes.values()) {
-
-        if (typeGenerator instanceof RamlToPojoTypeGenerator) {
-
-          RamlToPojoTypeGenerator ramlToPojoTypeGenerator = (RamlToPojoTypeGenerator) typeGenerator;
-          ramlToPojoTypeGenerator.output(new CodeContainer<ResultingPojos>() {
-
-            @Override
-            public void into(ResultingPojos g) throws IOException {
-              g.createFoundTypes(rootDirectory.getAbsolutePath());
-            }
-          });
-        }
-        if (typeGenerator instanceof JavaPoetTypeGenerator) {
-
-          buildTypeTree(rootDirectory, (JavaPoetTypeGenerator) typeGenerator);
-          continue;
+            schemaRepository = Files.createTempDir();
         }
 
-        if (typeGenerator instanceof CodeModelTypeGenerator) {
-          CodeModelTypeGenerator b = (CodeModelTypeGenerator) typeGenerator;
-          if (!rootDirectory.exists()) {
-            java.nio.file.Files.createDirectories(rootDirectory.toPath());
-          }
-
-          b.output(new CodeContainer<JCodeModel>() {
-
-            @Override
-            public void into(JCodeModel g) throws IOException {
-
-              g.build(rootDirectory);
-            }
-          });
-        }
-
-      }
-
-
-      for (ResourceGenerator resource : resources) {
-        resource.output(new CodeContainer<TypeSpec>() {
-
-          @Override
-          public void into(TypeSpec g) throws IOException {
-            JavaFile.Builder file = JavaFile.builder(getResourcePackage(), g).skipJavaLangImports(true);
-            file.build().writeTo(rootDirectory);
-          }
-        });
-      }
-
-      for (JavaPoetTypeGenerator typeGenerator : supportGenerators) {
-
-        typeGenerator.output(new CodeContainer<TypeSpec.Builder>() {
-
-          @Override
-          public void into(TypeSpec.Builder g) throws IOException {
-
-            JavaFile.Builder file = JavaFile.builder(getSupportPackage(), g.build()).skipJavaLangImports(true);
-            file.build().writeTo(rootDirectory);
-          }
-        });
-      }
-
-    } finally {
-
-      if (schemaRepository != null) {
-
-        FileUtils.deleteDirectory(schemaRepository);
-      }
+        return schemaRepository;
     }
-  }
 
-  private void buildTypeTree(final File rootDirectory, final JavaPoetTypeGenerator typeGenerator) throws IOException {
-    JavaPoetTypeGenerator b = typeGenerator;
+    public Document getApi() {
+        return api;
+    }
 
-    b.output(new CodeContainer<TypeSpec.Builder>() {
+    public String getResourcePackage() {
 
-      @Override
-      public void into(final TypeSpec.Builder containing) throws IOException {
+        return configuration.getResourcePackage();
+    }
 
-        for (final JavaPoetTypeGenerator generator : internalTypesPerClass.get(typeGenerator)) {
+    public String getModelPackage() {
 
-          generator.output(new CodeContainer<TypeSpec.Builder>() {
+        return configuration.getModelPackage();
+    }
 
-            @Override
-            public void into(TypeSpec.Builder g) throws IOException {
-              g.addModifiers(Modifier.PUBLIC, Modifier.STATIC);
-              containing.addType(g.build());
+    public String getSupportPackage() {
+        return configuration.getSupportPackage();
+    }
+
+    public void generate(final File rootDirectory) throws IOException {
+
+        try {
+            if (resources.size() > 0 && shouldGenerateResponseClasses()) {
+                ResponseSupport.buildSupportClasses(rootDirectory, getSupportPackage());
             }
-          }, BuildPhase.INTERFACE);
-        }
 
-        if (containing != null) {
+            for (TypeGenerator<?> typeGenerator : builtTypes.values()) {
 
-          JavaFile.Builder file = JavaFile.builder(getModelPackage(), containing.build()).skipJavaLangImports(true);
-          file.build().writeTo(rootDirectory);
+                if (typeGenerator instanceof RamlToPojoTypeGenerator) {
+
+                    RamlToPojoTypeGenerator ramlToPojoTypeGenerator = (RamlToPojoTypeGenerator) typeGenerator;
+                    ramlToPojoTypeGenerator.output(g -> g.createFoundTypes(rootDirectory.getAbsolutePath()));
+                }
+                if (typeGenerator instanceof JavaPoetTypeGenerator) {
+
+                    buildTypeTree(rootDirectory, (JavaPoetTypeGenerator) typeGenerator);
+                    continue;
+                }
+
+                if (typeGenerator instanceof CodeModelTypeGenerator) {
+                    CodeModelTypeGenerator b = (CodeModelTypeGenerator) typeGenerator;
+                    if (!rootDirectory.exists()) {
+                        java.nio.file.Files.createDirectories(rootDirectory.toPath());
+                    }
+
+                    b.output(g -> g.build(rootDirectory));
+                }
+
+            }
+
+            // todo fix this:  not loops, lambdas.
+            for (ResourceGenerator resource : resources) {
+                resource.output(g -> JavaFile.builder(getResourcePackage(), g).skipJavaLangImports(true).build().writeTo(rootDirectory));
+            }
+
+            for (JavaPoetTypeGenerator typeGenerator : supportGenerators) {
+
+                typeGenerator.output(g -> JavaFile.builder(getSupportPackage(), g.build()).skipJavaLangImports(true).build().writeTo(rootDirectory));
+            }
+
+        } finally {
+
+            if (schemaRepository != null) {
+
+                FileUtils.deleteDirectory(schemaRepository);
+            }
         }
-      }
-    },
-             BuildPhase.INTERFACE
+    }
+
+    private void buildTypeTree(final File rootDirectory, final JavaPoetTypeGenerator typeGenerator) throws IOException {
+        JavaPoetTypeGenerator b = typeGenerator;
+
+        b.output(containing -> {
+
+                    for (final JavaPoetTypeGenerator generator : internalTypesPerClass.get(typeGenerator)) {
+
+                        generator.output(new CodeContainer<TypeSpec.Builder>() {
+
+                            @Override
+                            public void into(TypeSpec.Builder g) throws IOException {
+                                g.addModifiers(Modifier.PUBLIC, Modifier.STATIC);
+                                containing.addType(g.build());
+                            }
+                        }, BuildPhase.INTERFACE);
+                    }
+
+                    if (containing != null) {
+
+                        JavaFile.Builder file = JavaFile.builder(getModelPackage(), containing.build()).skipJavaLangImports(true);
+                        file.build().writeTo(rootDirectory);
+                    }
+                },
+                BuildPhase.INTERFACE
         );
+    }
 
-    if (implementations.contains(b)) {
+    public void newGenerator(String ramlTypeName, TypeGenerator<?> generator) {
 
-      b.output(new CodeContainer<TypeSpec.Builder>() {
+        builtTypes.put(ramlTypeName, generator);
+    }
 
-        @Override
-        public void into(final TypeSpec.Builder containing) throws IOException {
+    public void newSupportGenerator(JavaPoetTypeGenerator generator) {
 
-          for (final JavaPoetTypeGenerator generator : internalTypesPerClass.get(typeGenerator)) {
+        supportGenerators.add(generator);
+    }
 
-            generator.output(new CodeContainer<TypeSpec.Builder>() {
+    public void newResource(ResourceGenerator rg) {
 
-              @Override
-              public void into(TypeSpec.Builder g) throws IOException {
-                g.addModifiers(Modifier.PUBLIC, Modifier.STATIC);
-                containing.addType(g.build());
-              }
-            }, BuildPhase.IMPLEMENTATION);
-          }
+        resources.add(rg);
+    }
 
-          if (containing != null) {
-            JavaFile.Builder file = JavaFile.builder(getModelPackage(), containing.build()).skipJavaLangImports(true);
-            file.build().writeTo(rootDirectory);
-          }
+    public void constructClasses(GFinder finder) {
+
+        TypeFindingListener listener = new TypeFindingListener(foundTypes);
+        finder.findTypes(listener);
+
+        finder.setupConstruction(this);
+        for (GeneratorType type : foundTypes.values()) {
+
+            type.construct(this);
         }
-      },
-               BuildPhase.IMPLEMENTATION);
     }
-  }
 
-  public void newGenerator(String ramlTypeName, TypeGenerator generator) {
 
-    §builtTypes.put(ramlTypeName, generator);
-  }
+    public List<String> typeConfiguration() {
 
-  public void newSupportGenerator(JavaPoetTypeGenerator generator) {
-
-    supportGenerators.add(generator);
-  }
-
-  public void newResource(ResourceGenerator rg) {
-
-    resources.add(rg);
-  }
-
-  public void constructClasses(GFinder finder) {
-
-    TypeFindingListener listener = new TypeFindingListener(foundTypes);
-    finder.findTypes(listener);
-
-    finder.setupConstruction(this);
-    for (GeneratorType type : foundTypes.values()) {
-
-      type.construct(this);
+        return Arrays.asList(this.configuration.getTypeConfiguration());
     }
-  }
 
-
-  public List<String> typeConfiguration() {
-
-    return Arrays.asList(this.configuration.getTypeConfiguration());
-  }
-
-  public void setConfiguration(Configuration configuration) {
-    this.configuration = configuration;
-  }
-
-  public GenerationConfig getJsonMapperConfig() {
-    return configuration.createJsonSchemaGenerationConfig();
-  }
-
-  private <T> void loadBasePlugins(Set<T> plugins, Class<T> pluginType) {
-
-    List<String> configuredPlugins = FluentIterable.from(this.typeConfiguration()).transform(new Function<String, String>() {
-
-      @Nullable
-      @Override
-      public String apply(@Nullable String s) {
-        return "ramltojaxrs." + s;
-      }
-    }).toList();
-
-    for (String basePlugin : configuredPlugins) {
-      plugins.addAll(pluginManager.getClassesForName(basePlugin, Collections.<String>emptyList(), pluginType));
+    public void setConfiguration(Configuration configuration) {
+        this.configuration = configuration;
     }
-  }
 
-  public ResourceClassExtension<GResource> pluginsForResourceClass(Function<Collection<ResourceClassExtension<GResource>>, ResourceClassExtension<GResource>> provider,
-                                                                   GResource resource) {
-
-    List<PluginDef> data = Annotations.RESOURCE_PLUGINS.get(Collections.<PluginDef>emptyList(), api, resource);
-    Set<ResourceClassExtension> plugins = buildPluginList(ResourceClassExtension.class, data);
-
-    // Ugly, but I don't care
-    return provider.apply(FluentIterable.from(plugins)
-        .transform(new Function<ResourceClassExtension, ResourceClassExtension<GResource>>() {
-
-          @Nullable
-          @Override
-          public ResourceClassExtension<GResource> apply(@Nullable ResourceClassExtension resourceClassExtension) {
-            return resourceClassExtension;
-          }
-        }).toList());
-  }
-
-  public ResponseClassExtension<GMethod> pluginsForResponseClass(Function<Collection<ResponseClassExtension<GMethod>>, ResponseClassExtension<GMethod>> provider,
-                                                                 GMethod method) {
-
-    List<PluginDef> data = Annotations.RESPONSE_CLASS_PLUGINS.get(Collections.<PluginDef>emptyList(), api, method);
-    Set<ResponseClassExtension> plugins = buildPluginList(ResponseClassExtension.class, data);
-
-    // Ugly, but I don't care
-    return provider.apply(FluentIterable.from(plugins)
-        .transform(new Function<ResponseClassExtension, ResponseClassExtension<GMethod>>() {
-
-          @Nullable
-          @Override
-          public ResponseClassExtension<GMethod> apply(@Nullable ResponseClassExtension resourceClassExtension) {
-            return resourceClassExtension;
-          }
-        }).toList());
-  }
-
-  public ResourceMethodExtension<GMethod> pluginsForResourceMethod(Function<Collection<ResourceMethodExtension<GMethod>>, ResourceMethodExtension<GMethod>> provider,
-                                                                   GMethod resource) {
-
-    List<PluginDef> data = Annotations.METHOD_PLUGINS.get(Collections.<PluginDef>emptyList(), api, resource);
-    Set<ResourceMethodExtension> plugins = buildPluginList(ResourceMethodExtension.class, data);
-
-    // Ugly, but I don't care
-    return provider.apply(FluentIterable.from(plugins)
-        .transform(new Function<ResourceMethodExtension, ResourceMethodExtension<GMethod>>() {
-
-          @Nullable
-          @Override
-          public ResourceMethodExtension<GMethod> apply(@Nullable ResourceMethodExtension resourceClassExtension) {
-            return resourceClassExtension;
-          }
-        }).toList());
-  }
-
-  public ResponseMethodExtension<GResponse> pluginsForResponseMethod(Function<Collection<ResponseMethodExtension<GResponse>>, ResponseMethodExtension<GResponse>> provider,
-                                                                     GResponse resource) {
-
-    List<PluginDef> data = Annotations.RESPONSE_PLUGINS.get(Collections.<PluginDef>emptyList(), api, resource);
-    Set<ResponseMethodExtension> plugins = buildPluginList(ResponseMethodExtension.class, data);
-
-    // Ugly, but I don't care
-    return provider.apply(FluentIterable.from(plugins)
-        .transform(new Function<ResponseMethodExtension, ResponseMethodExtension<GResponse>>() {
-
-          @Nullable
-          @Override
-          public ResponseMethodExtension<GResponse> apply(@Nullable ResponseMethodExtension resourceClassExtension) {
-            return resourceClassExtension;
-          }
-        }).toList());
-  }
-
-  private <T> Set<T> buildPluginList(Class<T> cls, List<PluginDef> data) {
-    Set<T> plugins = new LinkedHashSet<>();
-    loadBasePlugins(plugins, cls);
-    for (PluginDef datum : data) {
-      plugins.addAll(pluginManager.getClassesForName(datum.getPluginName(), datum.getArguments(), cls));
+    public GenerationConfig getJsonMapperConfig() {
+        return configuration.createJsonSchemaGenerationConfig();
     }
-    return plugins;
-  }
 
-  public <T> Iterable<T> createExtensions(String className) {
+    private <T> void loadBasePlugins(Set<T> plugins, Class<T> pluginType) {
 
-    try {
-      Class c = Class.forName(className);
-      return (Iterable<T>) singletonList(c.newInstance());
-    } catch (ClassNotFoundException e) {
+        List<String> configuredPlugins = this.typeConfiguration().stream()
+                .map((Function<String, String>) s -> "ramltojaxrs." + s)
+                .collect(Collectors.toList());
 
-
-      return FluentIterable.from(extensionManager.getClassesForName(className)).transform(new Function<Class, T>() {
-
-        @Nullable
-        @Override
-        public T apply(@Nullable Class input) {
-          try {
-            return (T) input.newInstance();
-          } catch (InstantiationException | IllegalAccessException e1) {
-
-            throw new GenerationException(e1);
-          }
+        for (String basePlugin : configuredPlugins) {
+            plugins.addAll(pluginManager.getClassesForName(basePlugin, Collections.<String>emptyList(), pluginType));
         }
-      });
-    } catch (IllegalAccessException | InstantiationException e) {
-      throw new GenerationException(e);
-    }
-  }
-
-  public GlobalResourceExtension withResourceListeners() {
-
-    return resourceExtensionList;
-  }
-
-  public V10GType fetchType(EndPoint implementation, Operation method, AnyShape anyShape) {
-
-
-    if (anyShape instanceof SchemaShape) {
-
-      return (V10GType) ((JsonSchemaTypeGenerator) builtTypes.get(anyShape.name().value())).getType();
     }
 
-    // todo handling XML
+    public ResourceClassExtension pluginsForResourceClass(Function<Collection<ResourceClassExtension>, ResourceClassExtension> provider,
+                                                                     EndPoint resource) {
+
+        List<PluginDef> data = Collections.emptyList(); // todo annotations.... Annotations.RESOURCE_PLUGINS.get(Collections.<PluginDef>emptyList(), api, resource);
+        Set<ResourceClassExtension> plugins = buildPluginList(ResourceClassExtension.class, data);
+
+        // Ugly, but I don't care
+        return provider.apply(plugins.stream().map(x -> x).collect(Collectors.toList()));
+    }
+
+    public ResponseClassExtension pluginsForResponseClass(Function<Collection<ResponseClassExtension>, ResponseClassExtension> provider,
+                                                                   GMethod method) {
+
+        List<PluginDef> data = Collections.emptyList(); // todo Annotations.RESPONSE_CLASS_PLUGINS.get(Collections.<PluginDef>emptyList(), api, method);
+        Set<ResponseClassExtension> plugins = buildPluginList(ResponseClassExtension.class, data);
+
+        // Ugly, but I don't care
+        return provider.apply(plugins.stream().map(x -> x).collect(Collectors.toList()));
+    }
+
+    public ResourceMethodExtension pluginsForResourceMethod(Function<Collection<ResourceMethodExtension>, ResourceMethodExtension> provider,
+                                                                     GMethod resource) {
+
+        List<PluginDef> data = Collections.emptyList(); // todo Annotations.METHOD_PLUGINS.get(Collections.<PluginDef>emptyList(), api, resource);
+        Set<ResourceMethodExtension> plugins = buildPluginList(ResourceMethodExtension.class, data);
+
+        // Ugly, but I don't care
+        return provider.apply(plugins.stream().map(x -> x).collect(Collectors.toList()));
+    }
+
+    public ResponseMethodExtension pluginsForResponseMethod(Function<Collection<ResponseMethodExtension>, ResponseMethodExtension> provider,
+                                                                       GResponse resource) {
+
+        List<PluginDef> data = Collections.emptyList(); // todo Annotations.RESPONSE_PLUGINS.get(Collections.<PluginDef>emptyList(), api, resource);
+        Set<ResponseMethodExtension> plugins = buildPluginList(ResponseMethodExtension.class, data);
+
+        // Ugly, but I don't care
+        return provider.apply(plugins.stream().map(x -> x).collect(Collectors.toList()));
+    }
+
+    private <T> Set<T> buildPluginList(Class<T> cls, List<PluginDef> data) {
+        Set<T> plugins = new LinkedHashSet<>();
+        loadBasePlugins(plugins, cls);
+        for (PluginDef datum : data) {
+            plugins.addAll(pluginManager.getClassesForName(datum.getPluginName(), datum.getArguments(), cls));
+        }
+        return plugins;
+    }
+
+    public <T> Iterable<T> createExtensions(String className) {
+
+        try {
+            Class<?> c = Class.forName(className);
+            return (Iterable<T>) singletonList(c.newInstance());
+        } catch (ClassNotFoundException e) {
+
+            return extensionManager.getClassesForName(className).stream().map((Function<Class<?>, T>) input -> {
+                try {
+                    return (T) input.newInstance();
+                } catch (InstantiationException | IllegalAccessException e1) {
+
+                    throw new GenerationException(e1);
+                }
+            }).collect(Collectors.toList());
+        } catch (IllegalAccessException | InstantiationException e) {
+            throw new GenerationException(e);
+        }
+    }
+
+    public GlobalResourceExtension withResourceListeners() {
+
+        return resourceExtensionList;
+    }
+
+    public V10GType fetchType(EndPoint implementation, Operation method, AnyShape anyShape) {
+
+
+        if (anyShape instanceof SchemaShape) {
+
+            return (V10GType) ((JsonSchemaTypeGenerator) builtTypes.get(anyShape.name().value())).getType();
+        }
+
+        // todo handling XML
 //    if (anyShape instanceof SchemaShape) {
 //
 //      return (V10GType) ((XmlSchemaTypeGenerator) builtTypes.get(anyShape.type())).getType();
 //    }
 
-    RamlToPojo ramlToPojo = fetchRamlToPojoBuilder();
-    if (ramlToPojo.isInline(anyShape)) {
+        RamlToPojo ramlToPojo = fetchRamlToPojoBuilder();
+        if (ramlToPojo.isInline(anyShape)) {
 
-      TypeName typeName =
-          ramlToPojo
-              .fetchType(Names.javaTypeName(implementation, method, anyShape), anyShape);
-      V10RamlToPojoGType type =
-          new V10RamlToPojoGType(Names.javaTypeName(implementation, method, anyShape), anyShape);
-      type.setJavaType(typeName);
-      return type;
-    } else {
+            TypeName typeName =
+                    ramlToPojo
+                            .fetchType(Names.javaTypeName(implementation, method, anyShape), anyShape);
+            V10RamlToPojoGType type =
+                    new V10RamlToPojoGType(Names.javaTypeName(implementation, method, anyShape), anyShape);
+            type.setJavaType(typeName);
+            return type;
+        } else {
 
-      TypeName typeName =
-          ramlToPojo
-              .fetchType(anyShape.name().value(), anyShape);
-      V10RamlToPojoGType type = new V10RamlToPojoGType(anyShape.type(), anyShape);
-      type.setJavaType(typeName);
-      return type;
+            TypeName typeName =
+                    ramlToPojo
+                            .fetchType(anyShape.name().value(), anyShape);
+            V10RamlToPojoGType type = new V10RamlToPojoGType(anyShape.name().value(), anyShape);
+            type.setJavaType(typeName);
+            return type;
+        }
+
     }
 
-  }
+    public V10GType fetchType(EndPoint resource, AnyShape input) {
 
-  public V10GType fetchType(EndPoint resource, AnyShape input) {
+        RamlToPojo ramlToPojo = fetchRamlToPojoBuilder();
+        if (ramlToPojo.isInline(input)) {
 
-    RamlToPojo ramlToPojo = fetchRamlToPojoBuilder();
-    if (ramlToPojo.isInline(input)) {
+            TypeName typeName =
+                    fetchRamlToPojoBuilder()
+                            .fetchType(Names.javaTypeName(resource, input), input);
 
-      TypeName typeName =
-          fetchRamlToPojoBuilder()
-              .fetchType(Names.javaTypeName(resource, input), input);
+            V10RamlToPojoGType type = new V10RamlToPojoGType(input);
+            type.setJavaType(typeName);
+            return type;
+        } else {
 
-      V10RamlToPojoGType type = new V10RamlToPojoGType(input);
-      type.setJavaType(typeName);
-      return type;
-    } else {
+            TypeName typeName =
+                    fetchRamlToPojoBuilder()
+                            .fetchType(input.name().value(), input);
 
-      TypeName typeName =
-          fetchRamlToPojoBuilder()
-              .fetchType(input.type(), input);
-
-      V10RamlToPojoGType type = new V10RamlToPojoGType(input);
-      type.setJavaType(typeName);
-      return type;
-    }
-  }
-
-  public V10GType fetchType(EndPoint resource, Operation method, Response response, AnyShape anyShape) {
-
-    if (anyShape instanceof JSONTypeDeclaration) {
-
-      return (V10GType) ((JsonSchemaTypeGenerator) builtTypes.get(anyShape.type())).getType();
+            V10RamlToPojoGType type = new V10RamlToPojoGType(input);
+            type.setJavaType(typeName);
+            return type;
+        }
     }
 
-    if (anyShape instanceof XMLTypeDeclaration) {
+    public V10GType fetchType(EndPoint resource, Operation method, Response response, AnyShape anyShape) {
 
-      return (V10GType) ((XmlSchemaTypeGenerator) builtTypes.get(anyShape.type())).getType();
+        if (anyShape instanceof SchemaShape) {
+
+            return (V10GType) ((JsonSchemaTypeGenerator) builtTypes.get(anyShape.name().value())).getType();
+        }
+
+/*
+        if (anyShape instanceof XMLTypeDeclaration) {
+
+            return (V10GType) ((XmlSchemaTypeGenerator) builtTypes.get(anyShape.type())).getType();
+        }
+*/
+
+        RamlToPojo ramlToPojo = fetchRamlToPojoBuilder();
+        if (ramlToPojo.isInline(anyShape)) {
+
+            TypeName typeName =
+                    fetchRamlToPojoBuilder()
+                            .fetchType(Names.javaTypeName(resource, method, response, anyShape), anyShape);
+
+            V10RamlToPojoGType type =
+                    new V10RamlToPojoGType(Names.javaTypeName(resource, method, response, anyShape), anyShape);
+            type.setJavaType(typeName);
+            return type;
+        } else {
+
+            TypeName typeName =
+                    fetchRamlToPojoBuilder()
+                            .fetchType(anyShape.name().value(), anyShape);
+
+            V10RamlToPojoGType type = new V10RamlToPojoGType(anyShape.name().value(), anyShape);
+            type.setJavaType(typeName);
+            return type;
+        }
     }
 
+    public V10GType fetchType(String name, AnyShape anyShape) {
+        TypeName typeName =
+                fetchRamlToPojoBuilder()
+                        .fetchType(name, anyShape);
 
-    RamlToPojo ramlToPojo = fetchRamlToPojoBuilder();
-    if (ramlToPojo.isInline(anyShape)) {
-
-      TypeName typeName =
-          fetchRamlToPojoBuilder()
-              .fetchType(Names.javaTypeName(resource, method, response, anyShape), anyShape);
-
-      V10RamlToPojoGType type =
-          new V10RamlToPojoGType(Names.javaTypeName(resource, method, response, anyShape), anyShape);
-      type.setJavaType(typeName);
-      return type;
-    } else {
-
-      TypeName typeName =
-          fetchRamlToPojoBuilder()
-              .fetchType(anyShape.type(), anyShape);
-
-      V10RamlToPojoGType type = new V10RamlToPojoGType(anyShape.type(), anyShape);
-      type.setJavaType(typeName);
-      return type;
+        V10RamlToPojoGType type = new V10RamlToPojoGType(anyShape);
+        type.setJavaType(typeName);
+        return type;
     }
-  }
 
-  public V10GType fetchType(String name, AnyShape anyShape) {
-    TypeName typeName =
-        fetchRamlToPojoBuilder()
-            .fetchType(name, anyShape);
+    public boolean shouldCopySchemas() {
+        return configuration.getCopySchemas();
+    }
 
-    V10RamlToPojoGType type = new V10RamlToPojoGType(anyShape);
-    type.setJavaType(typeName);
-    return type;
-  }
+    public boolean shouldGenerateResponseClasses() {
+        return configuration.getGenerateResponseClasses();
+    }
 
-  public boolean shouldCopySchemas() {
-    return configuration.getCopySchemas();
-  }
-
-  public boolean shouldGenerateResponseClasses() {
-    return configuration.getGenerateResponseClasses();
-  }
-
-  public TypeName fetchTypeName(AnyShape anyShape) {
-    return fetchRamlToPojoBuilder().fetchType("none_but_fun", anyShape);
-  }
+    public TypeName fetchTypeName(AnyShape anyShape) {
+        return fetchRamlToPojoBuilder().fetchType("none_but_fun", anyShape);
+    }
 }
